# hud-ai-ingestion-pipeline

./: .gitignore  Makefile  README.md  delete_zip.py  main.py  pyproject.toml  reconcile.py  uploader.py
docs/diagrams/: hud_ingestion__architecture_general.puml  hud_ingestion__delete_zip.puml  hud_ingestion__reconcile_zip.puml  hud_ingestion__uploader_zip.puml
env/: sample.env
sql/: archives_index.sql
sql/views/: v_archives_active.sql  v_archives_review.sql
src/: delete_zip.py  reconcile.py  uploader.py  utils_youtube.py
