[project]
name = "hud-ai-ingestion-pipeline"
version = "0.1.0"
description = "Ingestion pipeline for HUD project: archive → raw → BigQuery."
authors = [
    {name = "mgonzalz",email = "114707509+mgonzalz@users.noreply.github.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage (>=3.3.0,<4.0.0)",
    "google-cloud-bigquery (>=3.36.0,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.11"
mypy = "^1.17.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

